Parallelize testing and building

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,51 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
-# Define when to trigger the workflow
+# Trigger the workflow on push or pull request
 on:
   push:
     branches:
-      - main  # This runs the workflow when pushing to the main branch
+      - main
   pull_request:
     branches:
       - main
 
 jobs:
-  build:
+  # Job 1: Run tests
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Check out the code from the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker Buildx for advanced build features
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+
+  # Job 2: Build Docker image
+  build:
+    runs-on: ubuntu-latest
+    needs: test  # This makes 'build' job wait for 'test' to complete
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 3: Cache Docker layers to speed up subsequent builds
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      # Step 4: Log in to Docker Hub (optional, if you're pushing images)
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 5: Build the Docker image and use the cached layers
       - name: Build and push Docker image
         run: |
-          docker build --cache-from=type=local,src=/tmp/.buildx-cache -t your-dockerhub-username/mynodeapp .
+          docker build -t your-dockerhub-username/mynodeapp .
+          docker push your-dockerhub-username/mynodeapp
